Changelog
===========

0.7 (unreleased)
----------------

- Nothing changed yet.


0.6 (2018-01-06)
----------------

- Use http
  [erral]


- Remove setup.cfg
  [erral]


0.5 (2018-01-06)
----------------

- Minor fixes
  [erral]

0.4.1 (2014-01-01)
--------------------

- Fix history [erral]

0.4 - (2014-01-01)
--------------------

- Handle situations when the given arbiter
  has not valid information in FIDE site [erral]

0.3 - (2013-01-08)
---------------------

- Avoid duplicated headers in exported csv file [erral]

- Fix arbiter parsing: previously some organizers were
  parsed like arbiters. Fixes #1 [erral]

0.2 - (2013-01-06)
-------------------

- Added a CSV file merging utlity [erral]

- Improve documentation [erral]

0.1 - (2013-01-06)
-------------------

- Initial release [erral]